--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     tty: true
   db:
     image: mysql:5.7.33
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: "mysql"
     ports:
