--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
       - 3001:3000
     depends_on:
       - db
+      - chrome
     stdin_open: true
     tty: true
+    environment:
+      SELENIUM_DRIVER_URL: http://chrome:4444/wd/hub
   db:
     image: mysql:5.7.33
     platform: linux/amd64
@@ -21,6 +24,10 @@ services:
       - 3307:3306
     volumes:
       - mysql_data:/var/lib/mysql
+  chrome:
+    image: selenium/standalone-chrome-debug:latest
+    ports:
+      - 4444:4444
 
 volumes:
   bundle:
