--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -23,7 +23,7 @@ jobs:
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
           echo 'deb http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list
           apt update -y
-          apt install -y google-chrome-stable=114.0.5735.133 imagemagick
+          apt install -y google-chrome-stable=114.0.5735.133-1 imagemagick
       - name: bundler config
         run: bundle config set path 'vendor/bundle'
       - name: cache gems
