--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
   chrome:
-    image: seleniarm/standalone-chromium:latest
+    image: seleniarm/standalone-chromium:114.0.5735.106-chromedriver-114.0.5735.106-20230615
     ports:
       - 5555:4444
 
